Fixed navbar not being fixed, updated boostrap

--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
         <link href="assets/apprise/apprise.min.css" rel="stylesheet" />
 
         <link href="assets/bootstrap/bootstrap.min.css" rel="stylesheet" media="screen" title="main">
-        <link href="assets/bootstrap/bootstrap-responsive.min.css" rel="stylesheet">
+        <!--<link href="assets/bootstrap/bootstrap-responsive.min.css" rel="stylesheet">-->
         <link href="assets/font-awesome/font-awesome.min.css" rel="stylesheet">
         <link href="assets/bootstrap-slider/bootstrap-slider.min.css" rel="stylesheet" />
         <!--<link href="assets/bootstrap/bootstrap.amelia.min.css" rel="stylesheet">-->
@@ -97,6 +97,48 @@
                 </p>
             </div>
 
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
+            <p> test </p>
+            <br />
         </div> <!-- /container -->
     </body>
     
