--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,7 @@
 
         <title>Test Site</title>
     </head>
-    <body>
+    <body style="padding-top: 70px;">
       
 
         <!-- Fixed navbar -->
@@ -97,7 +97,7 @@
                 </p>
             </div>
 
-            <p> test </p>
+            <p><a class="btn btn-success" href="/spec.html">Test</a></p>
             <br />
             <p> test </p>
             <br />
