--- a/www/index.html
+++ b/www/index.html
@@ -61,8 +61,8 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="./spec.html">About</a></li>
+                        <li><a href="spec.html">Contact</a></li>
                         <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -97,7 +97,9 @@
                 </p>
             </div>
 
-            <p><a class="btn btn-success" href="/spec.html">Test</a></p>
+            <p><a class="btn btn-success" href="spec.html">Test</a></p>
+            <br />
+            <p><a class="btn btn-success" href="./spec.html">Test with dot-slash</a></p>
             <br />
             <p> test </p>
             <br />
