Edited for splash screen

--- a/www/index.html
+++ b/www/index.html
@@ -55,6 +55,7 @@
         function onDeviceReady() {
             // Now safe to use device APIs
             $("#navigation").load("_navbar.html");
+            navigator.splashscreen.hide();
         }
 
         </script>
