Updated for UNICEF colours

--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,8 @@
         <link href="assets/bootstrap-slider/bootstrap-slider.min.css" rel="stylesheet" />
         <!--<link href="assets/bootstrap/bootstrap.amelia.min.css" rel="stylesheet">-->
 
+        <link href="assets/unicef.css" rel="stylesheet" />
+
         <script type="text/javascript" src="assets/other/jquery.min.js"></script>
         <script type="text/javascript" src="assets/other/blockui.min.js"></script>
         <script type="text/javascript" src="assets/other/i18next.min.js"></script>
