--- a/www/_navbar.html
+++ b/www/_navbar.html
@@ -7,7 +7,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Project name</a>
+                    <a class="navbar-brand" href="index.html"><i class="icon-home icon-white"> </i> UNICEF On Campus Lincoln</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
