Added beginning of Eventslist

--- a/www/assets/navbar.html
+++ b/www/assets/navbar.html
@@ -12,7 +12,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#">Home</a></li>
-                        <li><a href="./spec.html">About</a></li>
+                        <li><a href="./eventlist.html">Events</a></li>
                         <li><a href="spec.html">Contact</a></li>
                         <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
