Changed brand to logo

--- a/www/assets/navbar.html
+++ b/www/assets/navbar.html
@@ -7,13 +7,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html"><i class="icon-home icon-white"> </i> UNICEF On Campus Lincoln</a>
+                    <a class="navbar-brand-r"  href="index.html"><img style="margin-top:8px;" src="./images/logo.png" height="34px" /></a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="./eventlist.html">Events</a></li>
-                        <li><a href="spec.html">Contact</a></li>
+                        <li><a href="./index.html"><i class="icon-home icon-white"></i> Home</a></li>
+                        <li><a href="./eventlist.html"><i class="icon-calendar icon-white"></i> Events</a></li>
+                        <li><a href="spec.html"><i class="icon-home icon-white"></i> Contact</a></li>
                         <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                         <ul class="dropdown-menu">
