--- a/www/eventlist.html
+++ b/www/eventlist.html
@@ -66,7 +66,7 @@
         <div class="container">
             <div id="eventlist-page" data-role="page">
                 <div data-role="header">
-                    <h1><i class="icon-home"></i> Alex Bachuk Portfolio</h1>
+                    <h1><i class="icon-calendar"></i> Our Events</h1>
                 </div><!-- /#header -->
                 
                 <div id="eventlist-content" data-role="content">
