Styling for events

--- a/www/eventlist.html
+++ b/www/eventlist.html
@@ -78,11 +78,15 @@
                     <script id="eventlist-template" type="text/x-handlebars-template">
                         
                         {{#each posts}}
-                            <div class="eventlist-piece">
-
-                            <img src="{{attachments.[0].url}}" />
-                            <h4>{{title}}</h4>
+                        <div class="row">
+                            <div class="thumbnail" style="max-width:100%;">
+                                <img src="{{attachments.[0].url}}" width="100%" alt="{{title}}">
+                                <div class="caption">
+                                    <h4>{{title}}</h4>
+                                    {{excerpt}}
+                                </div>
                             </div>
+                        </div>
                         {{/each}}
                         
                     </script>
