Attempted restriction of image height for events

--- a/www/assets/navbar.html
+++ b/www/assets/navbar.html
@@ -7,7 +7,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand-r"  href="index.html"><img style="margin-top:8px;" src="./images/logo.png" height="34px" /></a>
+                    <a class="navbar-brand-r"  href="index.html"><img style="margin-top:8px; margin-left:10px;" src="./images/logo.png" height="34px" /></a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
