--- a/www/eventlist.html
+++ b/www/eventlist.html
@@ -81,7 +81,7 @@
                         <div class="row">
                             <div class="thumbnail" style="max-width:100%;">
                                 <div class="eventpreview">
-                                    <img src="{{attachments.[0].url}}" max-height="100px" width="100%" alt="{{title}}">
+                                    <img src="{{attachments.[0].url}}" height="50px" alt="{{title}}">
                                 </div>
                                 <div class="caption">
                                     <h4>{{title}}</h4>
