--- a/www/eventlist.html
+++ b/www/eventlist.html
@@ -80,7 +80,7 @@
                         {{#each posts}}
                         <div class="row">
                             <div class="thumbnail" style="max-width:100%;">
-                                <img class="eventpreview" src="{{attachments.[0].url}}" alt="{{title}}">
+                                <img class="eventpreview pull-left col-md-5" src="{{attachments.[0].url}}" alt="{{title}}">
                                 
                                 <div class="caption">
                                     <h4><a href="">{{title}}</a></h4>
