--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
         <link href="assets/unicef.css" rel="stylesheet" />
 
         <script type="text/javascript" src="assets/other/jquery.min.js"></script>
-        <script type="text/javascript" src="assets/other/blockui.min.js"></script>
+        <!--<script type="text/javascript" src="assets/other/blockui.min.js"></script>-->
         <script type="text/javascript" src="assets/other/i18next.min.js"></script>
         <!-- NOT NEEDED <script type="text/javascript" src="assets/other/segment-display.min.js"></script>-->
         <script type="text/javascript" src="assets/other/bootstrap-tabdrop.min.js"></script>
