Wrapped Carousel JS in docready JQuery

--- a/www/index.html
+++ b/www/index.html
@@ -47,10 +47,12 @@
         </script>
 
         <script type="text/javascript">
-        $('#MyCarousel').carousel({
-          interval: 2000,
-          wrap: true
-        })
+        $(document).ready(function() {
+            $('#MyCarousel').carousel({
+                interval: 1000,
+                wrap: true
+            })
+        });
         </script>
         <title>UNICEF On Campus Lincoln</title>
     </head>
