Added JS for slider auto loading

--- a/www/index.html
+++ b/www/index.html
@@ -101,6 +101,10 @@
                 </div>
             </div>
         </div> <!-- /container -->
+
+        <script type="text/javascript">
+            wordpress.indexslider();
+        </script>
     </body>
     
 </html>
