Trying to find the cause of the slider issue

--- a/www/index.html
+++ b/www/index.html
@@ -41,7 +41,9 @@
         }
 
         function OnDeviceReady() {
-            navigator.splashscreen.hide();
+            setTimeout(function() {
+                navigator.splashscreen.hide();
+            }, 2000);
             unicef.initialize();
         }
         </script>
