--- a/www/index.html
+++ b/www/index.html
@@ -77,7 +77,7 @@
 
             <div id="myCarousel" class="carousel slide">
                 <div id="indexcarousel-content" data-role="content">
-                    <div id="indexcarousel-data"></div>
+                    <div id="indexcarousel-data" name="indexcarousel-data"></div>
 
                     <script id="indexcarousel-template" type="text/x-handlebars-template">
                         <ol class="carousel-indicators">
